--- a/index.html
+++ b/index.html
@@ -1,9 +1,78 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>My Repository</title>
-</head>
-<body>
-<p><a href="Algorithms/heapsort.html">Heapsort</a></p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container theme-showcase" role="main">
+    	<div class="page-header">
+	    	<h1>Algorithms and Data-Structures</h1>
+	    </div>
+	    <div class="row">
+	    	<div class="col-sm-12">
+          		<div class="panel panel-primary">
+            		<div class="panel-heading">
+              			<h3 class="panel-title">Introduction</h3>
+            		</div>
+            		<div class="panel-body">
+              			This webpage contains tutorials on popular computer science algorithms and data-structures.
+            		</div>
+          		</div>
+        	</div><!-- /.col-sm-4 -->
+	    </div>
+	    <div class="page-header">
+	    	<h1>Solved Examples</h1>
+	    </div>
+	    <div class="row">
+	    	<div class="col-sm-6">
+	          	<div class="list-group">
+		            <a href="#" class="list-group-item active">
+		            	<h4 class="list-group-item-heading">Algorithms</h4>
+		            </a>
+		            <a href="Algorithms/heapsort.html" class="list-group-item">Heapsort</a>
+		            <a href="Algorithms/heapsort.html" class="list-group-item">Heapsort</a>
+		            <a href="Algorithms/heapsort.html" class="list-group-item">Heapsort</a>
+		            <a href="Algorithms/heapsort.html" class="list-group-item">Heapsort</a>
+          		</div>
+        	</div><!-- /.col-sm-4 -->
+
+        	<div class="col-sm-6">
+	          	<div class="list-group">
+		            <a href="#" class="list-group-item active">
+		            	<h4 class="list-group-item-heading">Data-Structures</h4>
+		            </a>
+		            <a href="Algorithms/heapsort.html" class="list-group-item">Heapsort</a>
+		            <a href="Algorithms/heapsort.html" class="list-group-item">Heapsort</a>
+		            <a href="Algorithms/heapsort.html" class="list-group-item">Heapsort</a>
+		            <a href="Algorithms/heapsort.html" class="list-group-item">Heapsort</a>
+          		</div>
+        	</div><!-- /.col-sm-4 -->
+	    </div>
+      
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+  </body>
 </html>
