--- a/Algorithms/heapsort.html
+++ b/Algorithms/heapsort.html
@@ -1,197 +1,259 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Heapsort</title>
-	<h1>Heapsort</h1>
-</head>
-<body onload="loadInfo()">
-	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-	<script type="text/javascript" src="heapsort.js"></script>
-	<link href="heapsort.css" rel="stylesheet" type="text/css" />
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Heapsort</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="heapsort.js"></script>
+    <link href="heapsort.css" rel="stylesheet" type="text/css" />
 
-	<script type="text/javascript" src="http://visjs.org/dist/vis.js"></script>
-	<script type="text/javascript" src="http://visjs.org/examples/network/exampleUtil.js"></script>
-  	<link href="http://visjs.org/dist/vis.css" rel="stylesheet" type="text/css" />
-  	<script type="text/javascript" src="tree.js"></script>
+    <script type="text/javascript" src="http://visjs.org/dist/vis.js"></script>
+    <script type="text/javascript" src="http://visjs.org/examples/network/exampleUtil.js"></script>
+    <link href="http://visjs.org/dist/vis.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="tree.js"></script>
+  </head>
 
-	<div style="background-color:#FAEBD7; color:black; padding:5px;">
-		<p><b>Heapsort</b> is a comparison based sorting technique based on Binary Heap data structure. It is similar to selection sort where we first find the maximum element and place the maximum element at the end. We repeat the same process for remaining element.</p>
-
-		<p>The binary heap data structures is an array that can be viewed as a complete binary tree. Each node of the binary tree corresponds to an element of the array. The array is completely filled on all levels except possibly lowest.</p>
-
-		<p>Heap Sort Algorithm for sorting in increasing order:</p>
-		<ol>
-		  <li>Build a max heap from the input data.</li>
-		  <li>The largest item is stored at the root of the heap. Replace it with the last item of the heap followed by reducing the size of heap by 1. Finally, heapify the root of tree.</li>
-		  <li>Repeat above steps until size of heap is greater than 1.</li>
-		</ol>
-	</div>
-
-	<br>
-	<div style="background-color:#FFFFE0; color:black; padding:5px;">
-		<p><b>Steps and Time Complexity Analysis</b></p>
-		<p>Step 1: Build Max Heap from unordered array; <b>O(n)</b></p>
-		<p>Step 2: Find maximum element A[1]; <b>O(log n)</b></p>
-		<p>Step 3: Swap elements A[n] and A[1]:now max element is at end of  array; <b>O(log n)</b></p>
-		<p>Step 4: Discard node n from heap (by decrementing heap-size variable); <b>O(log n)</b></p>
-		<p>Step 5: New root may violate max heap property, but its children are max heaps. Run max_heapify to fix this; <b>O(log n)</b></p>
-		<p>Step 6: Go to step 2; <b>n times</b></p>
-		<p>Total Time: <b>O(n log n)</b></p>
-	</div>
-
-	<br>
-	<div style="width: 90%; display: table; margin-left: 20px">
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p>
-	        		<b>Step 1: Building the heap tree</b>
-					<p id="numbers"></p>
-					The array represented as a tree, complete but not ordered.
-				</p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork" style="display: table-cell;"></div>
+  <body onload="loadInfo()">
+    <div class="container theme-showcase" role="main">
+    	<div class="page-header">
+	    	<h1>Heapsort</h1>
 	    </div>
-	    
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p><b>Step 2: Compare the 8 with 0. Since 8 > 0, therefore do not swap.</b></p>
-	        	<p id="inputArray1"></p>
-	        	<p id="outputArray1"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork1" style="display: table-cell;"></div>
-	    </div>
+	    <div class="row">
+	    	<div class="col-sm-12">
+          		<div class="panel panel-primary">
+            		<div class="panel-heading">
+              			<h3 class="panel-title">Description</h3>
+            		</div>
+            		<div class="panel-body">
+              			<p><b>Heapsort</b> is a comparison based sorting technique based on Binary Heap data structure. It is similar to selection sort where we first find the maximum element and place the maximum element at the end. We repeat the same process for remaining element.</p>
+                    <p>The binary heap data structures is an array that can be viewed as a complete binary tree. Each node of the binary tree corresponds to an element of the array. The array is completely filled on all levels except possibly lowest.</p>
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p><b>Step 3: 5 is not less than 2, therefore compare 9 and 5. Since 9 > 5, therefore do not swap.</b></p>
-	        	<p id="inputArray2"></p>
-	        	<p id="outputArray2"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork2" style="display: table-cell;"></div>
-	    </div>
+                    <p>Heap Sort Algorithm for sorting in increasing order:</p>
+                    <ol>
+                      <li>Build a max heap from the input data.</li>
+                      <li>The largest item is stored at the root of the heap. Replace it with the last item of the heap followed by reducing the size of heap by 1. Finally, heapify the root of tree.</li>
+                      <li>Repeat above steps until size of heap is greater than 1.</li>
+                    </ol>
+            		    <br>
+                    <p><b>Steps and Time Complexity Analysis</b></p>
+                    <p>Step 1: Build Max Heap from unordered array; <b>O(n)</b></p>
+                    <p>Step 2: Find maximum element A[1]; <b>O(log n)</b></p>
+                    <p>Step 3: Swap elements A[n] and A[1]:now max element is at end of  array; <b>O(log n)</b></p>
+                    <p>Step 4: Discard node n from heap (by decrementing heap-size variable); <b>O(log n)</b></p>
+                    <p>Step 5: New root may violate max heap property, but its children are max heaps. Run max_heapify to fix this; <b>O(log n)</b></p>
+                    <p>Step 6: Go to step 2; <b>n times</b></p>
+                    <p>Total Time: <b>O(n log n)</b></p>
+                </div>
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p><b>Step 4: 4 is not less than 3, therefore compare 1 and 4. Since 1 < 4, therefore swap.</b></p>
-	        	<p id="inputArray3"></p>
-	        	<p id="outputArray3"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork3" style="display: table-cell;"></div>
+          		</div>
+        	</div><!-- /.col-sm-4 -->
 	    </div>
-
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p><b>Step 5: 4 is less than 9, therefore compare 6 and 9. Since 6 < 9, therefore swap.</b></p>
-	        	<p id="inputArray4"></p>
-	        	<p id="outputArray4"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork4" style="display: table-cell;"></div>
+	    <div class="page-header">
+	    	<h2>Solved Example</h2>
 	    </div>
+      <p class="text-primary"><b>Step by step example to sort an array [7, 6, 1, 9, 8, 4, 3, 5, 2, 0] using heapsort</b></p>
+	    <table class="table table-hover">
+        <tbody>
+          <tr>
+            <td>
+                <b>Step 0: Building the heap tree</b>
+                <br>The array represented as a tree, complete but not ordered.
+                <p id="numbers"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork"></div>
+            </td>
+          </tr>
+          <!-- Step 1 -->
+          <tr>
+            <td>
+                <b>Step 1: Compare the 8 with 0. Since 8 > 0, therefore do not swap.</b>
+                <p id="inputArray1"></p>
+                <p id="outputArray1"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork1" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 1 -->
+          
+          <!-- Step 2 -->
+          <tr>
+            <td>
+                <b>Step 2: 5 is not less than 2, therefore compare 9 and 5. Since 9 > 5, therefore do not swap.</b>
+                <p id="inputArray2"></p>
+                <p id="outputArray2"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork2" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 2 -->
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p>Building the heap tree: The array represented as a tree, complete but not ordered.</p>
-	        	<p id="inputArray5"></p>
-	        	<p id="outputArray5"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork5" style="display: table-cell;"></div>
-	    </div>
+          <!-- Step 3 -->
+          <tr>
+            <td>
+                <b>Step 3: 4 is not less than 3, therefore compare 1 and 4. Since 1 < 4, therefore swap.</b>
+                <p id="inputArray3"></p>
+                <p id="outputArray3"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork3" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 3 -->
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p>Building the heap tree: The array represented as a tree, complete but not ordered.</p>
-	        	<p id="inputArray6"></p>
-	        	<p id="outputArray6"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork6" style="display: table-cell;"></div>
-	    </div>
+          <!-- Step 4 -->
+          <tr>
+            <td>
+                <b>Step 4: 4 is less than 9, therefore compare 6 and 9. Since 6 < 9, therefore swap.</b>
+                <p id="inputArray4"></p>
+                <p id="outputArray4"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork4" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 4 -->
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p>Building the heap tree: The array represented as a tree, complete but not ordered.</p>
-	        	<p id="inputArray7"></p>
-	        	<p id="outputArray7"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork7" style="display: table-cell;"></div>
-	    </div>
+          <!-- Step 5 -->
+          <tr>
+            <td>
+                <b>Step 5: </b>
+                <p id="inputArray5"></p>
+                <p id="outputArray5"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork5" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 5 -->
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p>Building the heap tree: The array represented as a tree, complete but not ordered.</p>
-	        	<p id="inputArray8"></p>
-	        	<p id="outputArray8"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork8" style="display: table-cell;"></div>
-	    </div>
+          <!-- Step 6 -->
+          <tr>
+            <td>
+                <b>Step 6: </b>
+                <p id="inputArray6"></p>
+                <p id="outputArray6"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork6" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 6 -->
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p>Building the heap tree: The array represented as a tree, complete but not ordered.</p>
-	        	<p id="inputArray9"></p>
-	        	<p id="outputArray9"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork9" style="display: table-cell;"></div>
-	    </div>
+          <!-- Step 7 -->
+          <tr>
+            <td>
+                <b>Step 7: </b>
+                <p id="inputArray7"></p>
+                <p id="outputArray7"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork7" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 7 -->
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p>Building the heap tree: The array represented as a tree, complete but not ordered.</p>
-	        	<p id="inputArray10"></p>
-	        	<p id="outputArray10"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork10" style="display: table-cell;"></div>
-	    </div>
+          <!-- Step 8 -->
+          <tr>
+            <td>
+                <b>Step 8: </b>
+                <p id="inputArray8"></p>
+                <p id="outputArray8"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork8" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 8 -->
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p>Building the heap tree: The array represented as a tree, complete but not ordered.</p>
-	        	<p id="inputArray11"></p>
-	        	<p id="outputArray11"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork11" style="display: table-cell;"></div>
-	    </div>
+          <!-- Step 9 -->
+          <tr>
+            <td>
+                <b>Step 9: </b>
+                <p id="inputArray9"></p>
+                <p id="outputArray9"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork9" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 9 -->
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p>Building the heap tree: The array represented as a tree, complete but not ordered.</p>
-	        	<p id="inputArray12"></p>
-	        	<p id="outputArray12"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork12" style="display: table-cell;"></div>
-	    </div>
+          <!-- Step 10 -->
+          <tr>
+            <td>
+                <b>Step 10: </b>
+                <p id="inputArray10"></p>
+                <p id="outputArray10"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork10" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 10 -->
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p>Building the heap tree: The array represented as a tree, complete but not ordered.</p>
-	        	<p id="inputArray13"></p>
-	        	<p id="outputArray13"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork13" style="display: table-cell;"></div>
-	    </div>
+          <!-- Step 11 -->
+          <tr>
+            <td>
+                <b>Step 11: </b>
+                <p id="inputArray11"></p>
+                <p id="outputArray11"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork11" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 11 -->
 
-	    <br>
-	    <div style="display: table-row;">
-	        <div id="mytext" style="display: table-cell;"> 
-	        	<p>Building the heap tree: The array represented as a tree, complete but not ordered.</p>
-	        	<p id="inputArray14"></p>
-	        	<p id="outputArray14"></p>
-	        </div>
-	        <div class="mynetwork" id="mynetwork14" style="display: table-cell;"></div>
-	    </div>
-	</div>
-</body>
+          <!-- Step 12 -->
+          <tr>
+            <td>
+                <b>Step 12: </b>
+                <p id="inputArray12"></p>
+                <p id="outputArray12"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork12" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 12 -->
 
-</html> 
+          <!-- Step 13 -->
+          <tr>
+            <td>
+                <b>Step 13: </b>
+                <p id="inputArray13"></p>
+                <p id="outputArray13"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork13" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 13 -->
+
+          <!-- Step 14 -->
+          <tr>
+            <td>
+                <b>Step 14: </b>
+                <p id="inputArray14"></p>
+                <p id="outputArray14"></p>
+            </td>
+            <td>
+              <div class="mynetwork" id="mynetwork14" style="display: table-cell;"></div>
+            </td>
+          </tr>
+          <!-- Step 14 -->
+
+        </tbody>
+      </table>
+    </div>
+  </body>
+</html>
